traces/bug_377.txt
src/femlib/QuadratureFormular.cpp:340: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of Fem2D::QF_GaussLegendre2 accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


src/femlib/QuadratureFormular.cpp:340:1: initialization of Fem2D::QF_GaussLegendre2
338.                     QuadratureFormular1d::QP(pgauss_n3_2,gauss_n3_2)); 
339.                       
340. > const QuadratureFormular1d QF_GaussLegendre2(3,
341.                     QuadratureFormular1d::QP(0.5,gauss_n2_1),
342.                     QuadratureFormular1d::QP(0.5,gauss_n2_2)); 

src/femlib/QuadratureFormular.cpp:340:28: call to Fem2D::GQuadratureFormular<Fem2D::R1>_GQuadratureFormular
338.                     QuadratureFormular1d::QP(pgauss_n3_2,gauss_n3_2)); 
339.                       
340.   const QuadratureFormular1d QF_GaussLegendre2(3,
                                  ^
341.                     QuadratureFormular1d::QP(0.5,gauss_n2_1),
342.                     QuadratureFormular1d::QP(0.5,gauss_n2_2)); 

src/femlib/QuadratureFormular.hpp:96:73: call to Fem2D::GQuadratureFormular<Fem2D::R1>_Verification
  94.       : exact(ex),n(3),size(n),p(new QP[3]),clean(true) { p[0]=p0,p[1]=p1,p[2]=p2;Verification();}
  95.     GQuadratureFormular(int ex,QP p0,QP p1) 
  96.       : exact(ex),n(2),size(n),p(new QP[2]),clean(true) { p[0]=p0,p[1]=p1;Verification();}
                                                                                ^
  97.     GQuadratureFormular(int ex,QP p0) 
  98.       : exact(ex),n(1),size(n),p(new QP[1]),clean(true) { p[0]=p0;Verification();}

src/femlib/QuadratureFormular.cpp:665:4: access to std::cout|
  663.         if (err>tol)
  664.   	{
  665.   	  cerr << " d= " << d << "T Ordre= " << k << " d!k!/(d+k)!= " << se << " " ;
            ^
  666.   	  for(int l=0;l<=d;++l)
  667.   	    cerr << sa[l] << " ";
